jetty core should not have websocket dependency
* fixing incidental broken dependencies in another module

--- a/bootique-jetty-servlets/pom.xml
+++ b/bootique-jetty-servlets/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>bootique-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-client</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <!-- Jersey client on Java 9+ needs these -->
         <dependency>
