#39 Add support for CORS configuration
* changing CORS filter tests to Jersey client
* Proper naming, adding missing annotations
* unwinding tests that succeeded, but were really broken

--- a/bootique-jetty-servlets/pom.xml
+++ b/bootique-jetty-servlets/pom.xml
@@ -73,8 +73,13 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-client</artifactId>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.inject</groupId>
+            <artifactId>jersey-hk2</artifactId>
             <scope>test</scope>
         </dependency>
 
