#39 Add support for CORS configuration
* renaming bootique-jetty-servlets to bootique-jetty-cors. Otherwise adding CORS filter may look as an annoying side effect
* ensuring default config works (albeit it is too all-encompasing for my liking)

--- a/bootique-jetty-cors/pom.xml
+++ b/bootique-jetty-cors/pom.xml
@@ -28,9 +28,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>bootique-jetty-servlets</artifactId>
-    <name>bootique-jetty-servlets: a module to integrate additional Jetty Servlets</name>
-    <description>Provides Jetty Servlets integration with Bootique.</description>
+    <artifactId>bootique-jetty-cors</artifactId>
+    <name>bootique-jetty-cors: CORS filter integration for Bootique</name>
+    <description>Provides CORS filter integration for Bootique.</description>
 
     <dependencies>
         <!-- Compile dependencies -->
