--- a/bootique-jetty-cors/src/test/resources/io/bootique/jetty/cors/CorsFilter.yml
+++ b/bootique-jetty-cors/src/test/resources/io/bootique/jetty/cors/CorsFilter.yml
@@ -20,4 +20,11 @@
 jetty:
   connectors:
     - port: 15001
-    - port: 15002
+
+jettycors:
+  urlPatterns:
+    - "/api"
+  allowedOrigins: "test"
+  allowedMethods: "POST"
+  allowedHeaders: "X-Requested-With,Content-Type,Accept,Origin"
+  preflightMaxAge: 180
