--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
 	<groupId>io.bootique.jetty</groupId>
 	<artifactId>bootique-jetty-parent</artifactId>
-    <version>1.0.RC1-SNAPSHOT</version>
+    <version>1.0.RC1</version>
 	<packaging>pom</packaging>
 
 	<name>bootique-jetty-parent: parent of Bootique/Jetty integration modules</name>
@@ -54,7 +54,7 @@
 	<scm>
         <developerConnection>scm:git:ssh://git@github.com/bootique/bootique-jetty</developerConnection>
         <url>https://github.com/bootique/bootique-jetty</url>
-        <tag>HEAD</tag>
+        <tag>1.0.RC1</tag>
     </scm>
 
     <distributionManagement>
