--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
 	<groupId>io.bootique.jetty</groupId>
 	<artifactId>bootique-jetty-parent</artifactId>
-    <version>1.0.RC2-SNAPSHOT</version>
+    <version>1.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>bootique-jetty-parent: parent of Bootique/Jetty integration modules</name>
