--- a/bootique-jetty-cors/pom.xml
+++ b/bootique-jetty-cors/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>bootique-jetty-parent</artifactId>
         <groupId>io.bootique.jetty</groupId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
