--- a/bootique-jetty-docs/pom.xml
+++ b/bootique-jetty-docs/pom.xml
@@ -101,7 +101,7 @@
                                 <sectnums/>
                                 <icons>font</icons>
                                 <toc>auto</toc>
-                                <bootique_version>${bootique.version}</bootique_version>
+                                <bootique_version>1.1</bootique_version>
                             </attributes>
                         </configuration>
                     </execution>
