--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,6 @@
 
     <properties>
         <bootique.version>${project.version}</bootique.version>
-        <hk2.version>2.5.0-b61</hk2.version>
         <websocket.version>1.1</websocket.version>
     </properties>
 
@@ -101,56 +100,28 @@
                 <artifactId>jetty-servlets</artifactId>
                 <version>${jetty.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.glassfish.jersey.inject</groupId>
-                <artifactId>jersey-hk2</artifactId>
-                <version>${jersey.version}</version>
-            </dependency>
             <dependency><!-- Transitive dependency of jersey-client -->
                 <groupId>javax.activation</groupId>
                 <artifactId>activation</artifactId>
                 <version>1.1.1</version>
             </dependency>
             <dependency>
-                <groupId>org.glassfish.hk2</groupId>
-                <artifactId>hk2-api</artifactId>
-                <version>${hk2.version}</version>
-                <exclusions>
-                    <!-- Guice includes this one -->
-                    <exclusion>
-                        <groupId>org.glassfish.hk2.external</groupId>
-                        <artifactId>aopalliance-repackaged</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>org.glassfish.hk2</groupId>
-                <artifactId>hk2-locator</artifactId>
-                <version>${hk2.version}</version>
-                <exclusions>
-                    <!-- Guice includes this one -->
-                    <exclusion>
-                        <groupId>org.glassfish.hk2.external</groupId>
-                        <artifactId>aopalliance-repackaged</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <artifactId>javax.inject</artifactId>
-                        <groupId>org.glassfish.hk2.external</groupId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
 				<groupId>org.glassfish.jersey.core</groupId>
 				<artifactId>jersey-client</artifactId>
 				<version>${jersey.version}</version>
                 <exclusions>
-                    <!-- Guice includes this one -->
+                    <!-- Bootique includes this one -->
                     <exclusion>
-                        <artifactId>javax.inject</artifactId>
                         <groupId>org.glassfish.hk2.external</groupId>
+                        <artifactId>jakarta.inject</artifactId>
                     </exclusion>
                 </exclusions>
 			</dependency>
+            <dependency>
+                <groupId>org.glassfish.jersey.inject</groupId>
+                <artifactId>jersey-hk2</artifactId>
+                <version>${jersey.version}</version>
+            </dependency>
 		</dependencies>
 	</dependencyManagement>
 
