upgrading internal tests to JUnit 5

--- a/bootique-jetty-websocket/pom.xml
+++ b/bootique-jetty-websocket/pom.xml
@@ -54,18 +54,13 @@
 
 		<!-- Unit test dependencies -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.bootique</groupId>
-			<artifactId>bootique-test</artifactId>
+			<artifactId>bootique-test-junit5</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -73,7 +68,6 @@
 			<artifactId>slf4j-simple</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
 			<artifactId>jersey-client</artifactId>
