--- a/bootique-jetty/pom.xml
+++ b/bootique-jetty/pom.xml
@@ -58,11 +58,6 @@
 
 		<!-- Unit test dependencies -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
@@ -74,7 +69,7 @@
 		</dependency>
 		<dependency>
 			<groupId>io.bootique</groupId>
-			<artifactId>bootique-test</artifactId>
+			<artifactId>bootique-test-junit5</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
