JUnit5 module names got shortened

--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
             </dependency>
             <dependency>
                 <groupId>io.bootique</groupId>
-                <artifactId>bootique-test-junit5</artifactId>
+                <artifactId>bootique-junit5</artifactId>
                 <version>${bootique.version}</version>
             </dependency>
             <dependency>
