--- a/bootique-jetty-instrumented/pom.xml
+++ b/bootique-jetty-instrumented/pom.xml
@@ -62,7 +62,7 @@
 		</dependency>
 		<dependency>
 			<groupId>io.bootique</groupId>
-			<artifactId>bootique-test-junit5</artifactId>
+			<artifactId>bootique-junit5</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
