--- a/bootique-jetty-metrics/pom.xml
+++ b/bootique-jetty-metrics/pom.xml
@@ -61,7 +61,7 @@
         </dependency>
         <dependency>
             <groupId>io.bootique</groupId>
-            <artifactId>bootique-test-junit5</artifactId>
+            <artifactId>bootique-junit5</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
