--- a/bootique-jetty-docs/pom.xml
+++ b/bootique-jetty-docs/pom.xml
@@ -33,7 +33,7 @@
         <asciidoctorj.version>2.1.0</asciidoctorj.version>
         <asciidoctor.maven.plugin.version>2.0.0-RC.1</asciidoctor.maven.plugin.version>
         <jruby.version>9.2.8.0</jruby.version>
-        <bootique.asciidoc.extension.version>2.0-SNAPSHOT</bootique.asciidoc.extension.version>
+        <bootique.asciidoc.extension.version>2.0.M1</bootique.asciidoc.extension.version>
     </properties>
 
     <pluginRepositories>
@@ -99,7 +99,7 @@
                                 <sectnums />
                                 <icons>font</icons>
                                 <toc>auto</toc>
-                                <bootique_version>1.1</bootique_version>
+                                <bootique_version>1.2</bootique_version>
                             </attributes>
                         </configuration>
                     </execution>
