--- a/bootique-jetty-instrumented/pom.xml
+++ b/bootique-jetty-instrumented/pom.xml
@@ -24,7 +24,7 @@
 	<parent>
 		<groupId>io.bootique.jetty</groupId>
 		<artifactId>bootique-jetty-parent</artifactId>
-		<version>3.0-SNAPSHOT</version>
+		<version>3.0.M1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>bootique-jetty-instrumented</artifactId>
