--- a/bootique-jetty-cors/pom.xml
+++ b/bootique-jetty-cors/pom.xml
@@ -30,17 +30,22 @@
     <name>bootique-jetty-cors: CORS filter integration for Bootique</name>
     <description>Provides CORS filter integration for Bootique.</description>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-servlets</artifactId>
+                <version>${jetty9.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <!-- Compile dependencies -->
         <dependency>
             <groupId>io.bootique.jetty</groupId>
             <artifactId>bootique-jetty</artifactId>
             <version>${bootique.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-server</artifactId>
             <scope>compile</scope>
         </dependency>
         <dependency>
