--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,12 @@
 
     <properties>
         <bootique.version>${project.version}</bootique.version>
+
+        <!-- TODO: move activation and websocket versions to bootique-modules-parent -->
         <websocket.version>1.1</websocket.version>
         <jakarta.websocket.version>2.0.0</jakarta.websocket.version>
+
+        <activation2.version>2.0.1</activation2.version>
     </properties>
 
 	<scm>
