--- a/bootique-jetty11-junit5/pom.xml
+++ b/bootique-jetty11-junit5/pom.xml
@@ -55,6 +55,11 @@
                 <artifactId>jersey-hk2</artifactId>
                 <version>${jersey3.version}</version>
             </dependency>
+            <dependency>
+                <groupId>jakarta.activation</groupId>
+                <artifactId>jakarta.activation-api</artifactId>
+                <version>${activation2.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -76,6 +81,10 @@
         <dependency>
             <groupId>org.glassfish.jersey.inject</groupId>
             <artifactId>jersey-hk2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
         </dependency>
 
         <!-- Unit test dependencies -->
