--- a/bootique-jetty11/pom.xml
+++ b/bootique-jetty11/pom.xml
@@ -33,6 +33,21 @@
 	<name>bootique-jetty11: a module to run Jetty 11 on Bootique</name>
 	<description>Provides Jetty 11 integration with Bootique</description>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-server</artifactId>
+				<version>${jetty11.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-servlet</artifactId>
+				<version>${jetty11.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
 		<!-- Compile dependencies -->
 		<dependency>
