--- a/bootique-jetty-instrumented/pom.xml
+++ b/bootique-jetty-instrumented/pom.xml
@@ -61,34 +61,14 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>io.bootique</groupId>
-			<artifactId>bootique-junit5</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.glassfish.jersey.core</groupId>
-			<artifactId>jersey-client</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.jersey.inject</groupId>
-			<artifactId>jersey-hk2</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<!-- Jersey client on Java 9+ needs these -->
-		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>javax.activation</groupId>
-			<artifactId>activation</artifactId>
+			<groupId>io.bootique.jetty</groupId>
+			<artifactId>bootique-jetty-junit5</artifactId>
+			<version>${bootique.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
