--- a/bootique-jetty/pom.xml
+++ b/bootique-jetty/pom.xml
@@ -45,6 +45,23 @@
 				<artifactId>jetty-servlet</artifactId>
 				<version>${jetty9.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.glassfish.jersey.core</groupId>
+				<artifactId>jersey-client</artifactId>
+				<version>${jersey2.version}</version>
+				<exclusions>
+					<!-- Bootique includes this one -->
+					<exclusion>
+						<groupId>org.glassfish.hk2.external</groupId>
+						<artifactId>jakarta.inject</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.glassfish.jersey.inject</groupId>
+				<artifactId>jersey-hk2</artifactId>
+				<version>${jersey2.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
