--- a/bootique-jetty-junit5/pom.xml
+++ b/bootique-jetty-junit5/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.bootique.jetty</groupId>
         <artifactId>bootique-jetty-parent</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.0.1</version>
     </parent>
 
     <artifactId>bootique-jetty-junit5</artifactId>
