--- a/bootique-jetty-jakarta-cors/pom.xml
+++ b/bootique-jetty-jakarta-cors/pom.xml
@@ -36,6 +36,12 @@
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-servlets</artifactId>
                 <version>${jetty11.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -46,12 +52,10 @@
             <groupId>io.bootique.jetty</groupId>
             <artifactId>bootique-jetty-jakarta</artifactId>
             <version>${bootique.version}</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-servlets</artifactId>
-            <scope>compile</scope>
         </dependency>
 
         <!-- Unit test dependencies -->
