JettyTester's ResponseMatcher must allow access to any type of content #117

--- a/bootique-jetty-junit5/pom.xml
+++ b/bootique-jetty-junit5/pom.xml
@@ -18,7 +18,8 @@
    under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -30,10 +31,12 @@
     <artifactId>bootique-jetty-junit5</artifactId>
     <packaging>jar</packaging>
 
-    <name>bootique-jetty-junit5: JUnit 5 utilities to start Jetty on a dynamic port </name>
-    <description>JUnit 5 utilities to start Jetty on a dynamically determined port and provide a client that can be used by the tests</description>
+    <name>bootique-jetty-junit5: JUnit 5 utilities to start Jetty on a dynamic port</name>
+    <description>JUnit 5 utilities to start Jetty on a dynamically determined port and provide a client that can be used
+        by the tests
+    </description>
 
-	<dependencyManagement>
+    <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>io.bootique.jetty</groupId>
@@ -42,7 +45,7 @@
             </dependency>
             <dependency>
                 <groupId>io.bootique</groupId>
-				<artifactId>bootique-junit5</artifactId>
+                <artifactId>bootique-junit5</artifactId>
                 <version>${bootique.version}</version>
             </dependency>
             <dependency>
