Replace ${bootique.version} with ${project.version}

--- a/bootique-jetty-jakarta-cors/pom.xml
+++ b/bootique-jetty-jakarta-cors/pom.xml
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>io.bootique.jetty</groupId>
             <artifactId>bootique-jetty-jakarta</artifactId>
-            <version>${bootique.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>io.bootique.jetty</groupId>
             <artifactId>bootique-jetty-jakarta-junit5</artifactId>
-            <version>${bootique.version}</version>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
